docs/static/po_files/konnector.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-bind
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konnector
  namespace: kube-bind
  labels:
    app: konnector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: konnector
  template:
    metadata:
      labels:
        app: konnector
    spec:
      restartPolicy: Always
      serviceAccountName: konnector
      containers:
        - name: konnector
          # Make sure to use the latest image version here:
          image: public.ecr.aws/w5n9a2g2/klutch/konnector:v1.3.2
