docs/static/po_files/health-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-anynines-health
  namespace: crossplane-system
spec:
  selector:
    pkg.crossplane.io/provider: provider-anynines
  ports:
    - port: 8081
      protocol: TCP
